Fix footer on mobile landscape mode

--- a/index.css
+++ b/index.css
@@ -45,15 +45,6 @@ footer {
 }
 
 @media screen and (max-width: 768px) {
-    .content {
-        width: 90%;
-    }
-
-    .wrapper h1 {
-        margin-top: 0;
-        padding-top: 20px;
-    }
-
     h1 {
         font-size: 34pt;
     }
@@ -64,5 +55,27 @@ footer {
 
     input {
         font-size: 14pt;
+    }
+
+    footer {
+        height: 70px;
+        margin-top: -70px;
+    }
+
+    .content {
+        width: 90%;
+    }
+
+    .wrapper {
+        margin-bottom: -70px;
+    }
+
+    .wrapper h1 {
+        margin-top: 0;
+        padding-top: 20px;
+    }
+
+    .push {
+        margin-bottom: -70px;
     }
 }
